[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
    geonode/.*/migrations/.*
  | geonode/.*/settings.py
  | management
  | scripts
  | docs
  | static
  | migrations
  | node_modules
)/
'''

[build-system]
requires = ["setuptools >= 51.0.0", "pip >= 19.1", "wheel>=0.36.0"]
build-backend = "setuptools.build_meta"
